2022-05-30  Bart Schaefer  <schaefer@zsh.org>

	* Marlon Richert: 50307 (cf. PWS 50205):
	Completion/Zsh/Type/_suffix_alias_files: suffix aliases should not
	collide	with directory names when completing

2022-05-26  Peter Stephenson  <p.stephenson@samsung.com>

	* 50287: configure.ac: Turn on use of getcwd by default.  Leave
	the ability to turn it off per OS configuration.

	* 50286: Functions/Misc/zed: avoid error if nounset is in effect.

2022-05-25  Norbert Lange  <nolange79@gmail.com>

	* github #94: Completion/Linux/Command/_modutils: Support .zst
	kernel modules with modutils.

	* github #93: Completion/Linux/Command/_btrfs,
	Completion/Linux/Command/_fusermount,
	Completion/Unix/Type/_umountable: Replace /etc/mtab with
	/proc/self/mounts for Linux.

2022-05-22  Bart Schaefer  <schaefer@zsh.org>

	* 50278: Completion/Unix/Command/_man: use `man -w` in preference
	to `manpath` for portability; fix caching and precedence of -M

2022-05-20  Arvid Norlander  <VorpalBlade@users.noreply.github.com>

	* github #91: Completion/Unix/Command/_find: _find
	(gnu/freebsd/darwin): Add some flags and syntaxes

2022-05-14  Bart Schaefer  <schaefer@zsh.org>

	* 50229: NEWS: Typo

	* Jan Brieg: 50212 (and discussion): Functions/Misc/colors: Add
	"bright" color variants

2022-05-15  Axel Beckert  <abe@deuxchevaux.org>

	* 50220: Doc/Zsh/{builtins,options}.yo: Fix typos found by
	Debian's Lintian tool.

2022-05-14  dana  <dana@dana.is>

	* unposted: Config/version.mk: Post-release version bump

	* unposted: Config/version.mk: Update for 5.9

2022-05-11  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 50192: Src/openssh_bsd_setres_id.c: use set{u,g}id() instead of
	setre{u,g}id() for dropping privilege on NetBSD

2022-05-08  dana  <dana@dana.is>

	* 50176 (with xpufx, tweaked): Completion/Linux/Command/_htop:
	Improve htop completion

2022-05-07  Bart Schaefer  <schaefer@zsh.org>

	* 50184: Completion/Base/Utility/_values: fix inclusion of -S